@@ -2,7 +2,7 @@ v 19981213
 B 202 -1 800 800 3
 P 200 400 0 400 1
 P 1000 400 1200 400 1
-L 200 0 1000 800 17
+L 200 0 1000 800 15
 A 380 559 90 27 125 3
 A 540 641 90 207 125 3
 L 550 850 650 800 3
