@@ -2,7 +2,7 @@ v 19981213
 B 202 -1 800 800 3
 P 200 400 0 400 1
 P 1000 400 1200 400 1
-L 200 0 1000 800 17
+L 200 0 1000 800 15
 L 900 220 580 220 3
 L 900 180 820 180 3
 L 780 180 700 180 3
