@@ -1,7 +1,7 @@
 v 19981213
 P 200 400 0 400 1
 P 1000 400 1200 400 1
-L 200 0 1000 800 17
+L 200 0 1000 800 15
 L 550 850 650 800 3
 L 650 800 550 750 3
 L 500 100 550 100 3
