@@ -2,7 +2,7 @@ v 19981213
 B 202 -1 800 800 3
 P 200 400 0 400 1
 P 1000 400 1200 400 1
-L 200 0 1000 800 17
+L 200 0 1000 800 15
 L 620 620 300 620 3
 L 620 580 540 580 3
 L 500 580 420 580 3
