@@ -8,6 +8,9 @@ ChangeLog for libgeda
 
 Most recent changes are at the top of this file
 
+9/18/99	Fixed a bug in s_color_gdcolor_init, had the gd color alloc in the
+	wrong place (before a pointer was set)
+
 9/17/99	Added/changed a few variables the various structures in struct.h
 
 9/16/99	Removed the restriction that sym/sch files have to be perfect.  You
